--- a/demo/ife/task_1_06_1.html
+++ b/demo/ife/task_1_06_1.html
@@ -24,82 +24,88 @@
 					<span class="cover-right"></span>
 				</div>
 				<aside>
-					<br>
-					<p>ABOUT</p>
-					<p>TECHNOLOGE</p>
-					<p>About technologe about technologe about technologe</p>
-					<p>700</p>
-					<p>3.2</p>
-					<div>
-						<p>css</p>
-						<p>csssssscccssssssssscc</p>
+					<div class="aside-top">
+						<hr>
+						<h2>About</h2>
+						<h2>Technologe</h2>
+						<p>About technologe about technologe about technologe</p>
+						<div id="num-big">700</div>						
+						<div class="num-down">
+							<div id="num-small">3.2</div>
+							<div id="css">css</div>
+							<div id="css-small">csssssscccssssscc</div>
+						</div>
 					</div>
 				</aside>
 			</section>
-			<section class="middle">
+			<section class="middle clearfix">
 				<article class="what">
 					<h2>what</h2>
-					<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+					<p>前端前端前端前端前端前端前端前前端前前端前前端前前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
 				</article>
 				<article class="when">
 					<h2>when</h2>
-					<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+					<p>前端前端前端前端前端前端前前前前前前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
 				</article>
 				<article class="how">
 					<h2>how</h2>
 					<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
 					<div>
-						<p>what--------40%</p>
-						<p>what--------30%</p>
-						<p>what---------30%</p>
+						<p>What---------<span>40%</span></p>
+						<p>What---------<span>30%</span></p>
+						<p>What----------<span>30%</span></p>
 					</div>
 				</article>
 			</section>
-			<section class="down">
-				<article>
-					<h1>THE TECHNOLOGE OF FRONT</h1>
-					<h1>前端技术领域</h1>
-					<br>
-					<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
-					<img src="images/task_1_06/task_1_06_3.jpg">
-					<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
-					<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
-				</article>
-				<aside>
-					<div>						
-						<figure>
-							<img src="images/task_1_06/task_1_06_2.jpg">
-							<figcaption>
-								<blockquote>
-									<span>前端技术</span>
-									<span>前端技术前端技术</span>
-								</blockquote>
-							</figcaption>
-						</figure>
-					</div>
-					<div>
-						<ul>
-							<li><p>前端前端前端前端前.......<span>前端</span></p></li>
-							<li><p>前端前端前......<span>前端前</span></p></li>
-							<li>前端前端前端前端.....<span>前端</span></li>
-						</ul>
-						<div>
-							<span>0</span>
-							<div>
-								<p>ONE TWO</p>
-								<p>THREE FORE FIVE</p>
-								<p>hello world hello world hello world</p>
+			<section class="down clearfix">
+				<div class="down-left">
+					<article>
+						<div class="h1"><span>THE</span> TECHNOLOGE <br>OF FRONT</div>
+						<h2>前端技术领域</h2>
+						<hr>
+						<p class="part-one"><span>前</span>端前端前端前端前前端前前端前前端前前端前前端前前端前前端前前端前前前端前前端前前端前前端前前端前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前端前前端前前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前<img src="images/task_1_06/task_1_06_3.jpg">前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+						<p>前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+						<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+					</article>
+				</div>
+				<div class="down-right">
+					<aside>
+						<div class="down-right-up">						
+							<figure>
+								<img src="images/task_1_06/task_1_06_2.jpg">
+								<figcaption>
+									<blockquote>
+										<span id="figcaption-one">&nbsp&nbsp前端技术</span>
+										<span id="figcaption-two">前端技术前端技术</span>
+									</blockquote>
+								</figcaption>
+							</figure>
+						</div>
+						<div class="down-right-down">
+							<div class="list">
+								<p><span class="triangle"></span>前端前端前端前端前.....................<span class="p-end">前端</span></p>
+								<p><span class="triangle"></span>前端前端前端前端前.....................<span class="p-end">前端</span></p>
+								<p><span class="triangle"></span>前端前端前端前端前.....................<span class="p-end">前端</span></p>
 							</div>
-							<div>
-								<q>hello world hello world hello world hello world hello world hello world hello world hello world hello world hello world hello world</q>
-							</div>
-						</div>					
-					</div>
-				</aside>
+							<div class="under-list">
+								<div class="under-list-left">
+									<span>0</span>
+									<div>
+										<p class="line-one">ONE TWO <br>THREE FORE FIVE</p>										
+										<p class="line-two">hello world hello world hello world</p>
+									</div>
+								</div>
+								<div class="under-list-right">
+									<p><span class="quote-one">“</span> hello world hello world hello world hello world hello world hello world hello world hello world hello world hello world hello world<span class="quote-two">”</span></p>
+								</div>
+							</div>					
+						</div>
+					</aside>
+				</div>
 			</section>
 		</main>
 		<footer>
-			<hr>
+			
 			<span>ifm.baidu.com</span>
 		</footer>
 	</div>
